--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
   <header>
+    <img src="https://visitor-badge.glitch.me/badge?page_id=InfoGrecqueAncienne.github.io" alt="visitors badge">
+
     <h1>Les Mythos Grecs</h1>
     <p>Bienvenue! Ce site a été créé par des collègiens qui aimait coder. Il est fait pour un article dans le journal des 5e qui était un projet de chaque année.</p>
   </header>
