--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Les mythos grecs</title>
   <link rel="stylesheet" href="style.css">
+  <meta name="google-site-verification" content="nXG-8bRXGB05QTaZ1nrsO2l8XWg2-InbQPrPbCkRHRQ" />
 </head>
 <body>
   <header>
